# sword

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS  LICENSE  README.md  README.org
cmake/: FindGLPK.cmake  FindLLVM.cmake  FindOmp.cmake  FindOmpt.cmake  FindSword.cmake  LibswordUtils.cmake  SwordTesting.cmake
include/sword/: LinkAllPasses.h  RegisterPasses.h  Util.h
lib/: CMakeLists.txt  Sword.cpp
lib/Support/: RegisterPasses.cpp  Util.cpp
lib/Transforms/Instrumentation/: InstrumentParallel.cpp
lib/boost/bloom_filter/: basic_bloom_filter.hpp  counting_bloom_filter.hpp  twohash_counting_bloom_filter.hpp
lib/boost/bloom_filter/detail/: apply_hash.hpp  counting_apply_hash.hpp  twohash_counting_apply_hash.hpp
lib/boost/bloom_filter/hash/: default.hpp  murmurhash3.hpp
lib/rtl/: CMakeLists.txt  bloom_filter.hpp  count_min_sketch.cpp  count_min_sketch.hpp  sword_interface.inl  sword_interface2.inl  swordrt_common.h  swordrt_cuda.cu  swordrt_interface.h  swordrt_interface.inl  swordrt_interface1.inl  swordrt_interface2.inl  swordrt_rtl.cc  swordrt_rtl.h  swordrt_rtl1.cc  swordrt_rtl1.h  swordrt_rtl2.cc  swordrt_rtl2.h  swordrt_tsan_interface.h
lib/sanitizers_interface/: swordrt_ompsan_interface.cc  swordrt_ompsan_interface.h  swordrt_tsan_interface.h
lib/tsan/: swordrt_tsan_interface.cc  swordrt_tsan_interface.h
rtl/: CMakeLists.txt  SparseSet.h  hash_set.hpp  perf.h  sword_common.h  sword_flags.h  sword_interface.inl  sword_rtl.cc  sword_rtl.h  swordrt_common.h  swordrt_interface.inl  swordrt_ompsan_interface.cc  swordrt_ompsan_interface.h  swordrt_rtl.cc  swordrt_rtl.h
src/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/barrier/: barrier.c
test/critical/: critical.c  lock-nested.c  lock.c
test/parallel/: critical.c  parallel-firstprivate.c  parallel-simple.c  parallel-simple2.c
test/races/: critical-unrelated.c  lock-nested-unrelated.c  lock-unrelated.c  parallel-constant.c  parallel-simple.c  task-dependency.c  task-shared.c  task-taskgroup-unrelated.c  task-taskwait-nested.c  task-two.c  task_two.c
test/reduction/: parallel-reduction-nowait.c  parallel-reduction.c
test/task/: task-barrier.c  task-create.c  task-dependency.c  task-taskgroup-nested.c  task-taskgroup.c  task-taskwait-nested.c  task-taskwait.c
test/worksharing/: ordered.c
tools/: CMakeLists.txt  clang-sword  clang-sword++  clang-sword++.in  clang-sword.in  compiler.h  interval_tree.cc  interval_tree.h  interval_tree_generic.h  offline.sh  print.sh  rbtree.c  rbtree.h  rbtree_augmented.h  solve.py  solve_milp.py  sword-convert-log.cc  sword-offline-analysis.py  sword-offline-analysis.py.in  sword-print-report.cc  sword-race-analysis.cc  sword-race-analysis.h  sword-race-analysis2.cc  sword-tool-common.h  sword_intervaltree.h  symbolize.py
